# binpatcher

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  binpatcher.c
.github/workflows/: build-and-release.yml
cmake/Toolchains/: Toolchain-cross-mingw.cmake
